# sorare-nba-lineup-tool

./: .gitignore  README.md  add_result_prices.py  compute.py  deleteLineup.py  fetch_sorare_players.py  get_injure.py  login.py  pyproject.toml  query_all_cards.py  query_all_players.py  query_injure_and_match.py  query_overperform.py  query_position_players.py  setLineup.py  show_result.py  types_.py  utils.py
config/: NBACards.json  NBACards.json.example  config.py
data/: all_players_in_sorare.json  all_probility.json  player_positions.json  result-2022-11-27.txt  result.example  team-rank.json
query/: DeleteLineupMutation.graphql  NBACardsByIdsQuery.graphql  NBACardsByIdsQuery.json  NBACreateOrUpdateLineupMutation.graphql  NBAMyCardsSuggestionsQuery.graphql  NBAOpenFixtureQuery.graphql  NBAPlayersBySlugsQuery.graphql  NBAPlayersByTeamQuery.graphql  OverperformQuery.graphql  PriceHistoryQuery.graphql  RecentCurrentUserCardsQuery.graphql  SignInMutation.graphql
